2001-05-10  Sam Steingold  <sds@gnu.org>

	Fixed a crash, reported by Christophe Rhodes <csr21@cam.ac.uk>
	ANSI CL compliance: (merge-pathnames lp) --> lp
	* pathname.d: more debugging instrumentation
	(string2wild, wild2string): new macros
	(split_name_type): use them; "*.*" ==> :name :wild :device :wild
	(directory_namestring_parts): :name and :type maybe :wild
	(merge-pathnames): as per ANSI CL, return a logical pathname when
	the first argument is one.
	(directory_match, nametype_match, version_match):
	 unbound matches everything
	(directory_diff, nametype_diff, version_diff):
	 treat unbound appropriately too
	(translate_device, translate_nametype_aux): :WILD is the same as NIL

2001-05-09  Sam Steingold  <sds@gnu.org>

	Implemented the ANSI CL issue CONSTANTP-ENVIRONMENT:ADD-ARG
	* control.d (constantp): accept the optional environment arg
	* subr.d (constantp): ditto

2001-05-09  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (ARM): Recognize __arm__ as CPU indicator on Linux

2001-05-09  Sam Steingold  <sds@gnu.org>

	ANSI CL compiler macros are implemented
	* cmacros.lisp: new file
	* makemake.in (LPARTS): added cmacros
	* compiler.lisp (env, mac-exp): new aux inline functions
	(macroexpand-1, c-form, compile-toplevel-form &c): use them
	(macroexpand-form): call COMPILER-MACRO-FUNCTION
	(inline-callable-function-lambda-p, inline-callable-lambdabody-p):
	 use FUNCTION-FORM-FUNFORM
	(c-FUNCTION-CALL, c-APPLY): use SIMPLE-FUNCTION-FORM-P
	* init.lisp: load cmacros; export COMPILER-MACRO,
	 COMPILER-MACRO-FUNCTION DEFINE-COMPILER-MACRO
	* defmacro.lisp (make-macro-expansion): accept an optional
	 PRE-PROCESS argument

2001-05-06  Bruno Haible  <haible@clisp.cons.org>

	* configure: Configure and build libiconv before configuring gettext.
	While configuring gettext, add the build directory to the CPPFLAGS and
	LDFLAGS, so that HAVE_ICONV gets defined to 1.

2001-05-07  Sam Steingold  <sds@gnu.org>

	* hashtabl.d (sxhash): return a fixnum, as per ANSI CL
